--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -108,6 +108,11 @@ test {
         exceptionFormat "full"
     }
 
+    afterTest { descriptor, result ->
+        def totalTime = result.endTime - result.startTime
+        println "Total time of '$descriptor.name' was $totalTime ms"
+    }
+
     systemProperties = System.properties
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "unit-test-h2")
     systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
