Add an option to start credhub jvm with debug agent loaded

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -100,6 +100,9 @@ dependencyManagement {
 
 bootRun {
     sourceResources sourceSets.main
+    if (project.hasProperty("debug") && project.debug) {
+        jvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"]
+    }
     systemProperties = System.properties
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev, dev-h2")
 }
