Print some tracing message to standard error for troubleshooting purpose.
[#182659311]

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -104,7 +104,7 @@ sourceSets {
 
 test {
     testLogging {
-        events "passed", "failed", "skipped"
+        events "passed", "failed", "skipped", "standard_error"
         exceptionFormat "full"
     }
 
