feature: log when a test is starting
* so that we can more easily debug hanging tests

* without this feature, we don't know which test is hanging when the
  CI container is shut-down

[#182659311](https://www.pivotaltracker.com/story/show/182659311)

Co-authored-by: Bruce Ricard <bricard@vmware.com>

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -114,7 +114,7 @@ bootJar {
 
 test {
     testLogging {
-        events "passed", "failed", "skipped"
+        events "started", "passed", "failed", "skipped"
         exceptionFormat "full"
     }
 
