--- a/backends/shared-backend-configuration/build.gradle
+++ b/backends/shared-backend-configuration/build.gradle
@@ -74,7 +74,7 @@ sourceSets {
 
 test {
     testLogging {
-        events "passed", "failed", "skipped"
+        events "started", "passed", "failed", "skipped"
         exceptionFormat "full"
     }
 
