--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -122,7 +122,7 @@ protobuf {
 
 test {
     testLogging {
-        events "passed", "failed", "skipped"
+        events "started", "passed", "failed", "skipped"
         exceptionFormat "full"
     }
 
