--- a/backends/remote/build.gradle
+++ b/backends/remote/build.gradle
@@ -115,7 +115,7 @@ protobuf {
 
 test {
     testLogging {
-        events "passed", "failed", "skipped"
+        events "started", "passed", "failed", "skipped"
         exceptionFormat "full"
     }
 
