--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -91,7 +91,7 @@ sourceSets {
 
 test {
     testLogging {
-        events "passed", "failed", "skipped"
+        events "started", "passed", "failed", "skipped"
         exceptionFormat "full"
     }
 
