--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -80,7 +80,7 @@ sourceSets {
 
 test {
     testLogging {
-        events "passed", "failed", "skipped"
+        events "started", "passed", "failed", "skipped"
         exceptionFormat "full"
     }
 
