--- a/applications/credhub-api/src/main/resources/application-dev-aurora.yml
+++ b/applications/credhub-api/src/main/resources/application-dev-aurora.yml
@@ -2,6 +2,6 @@ spring:
   datasource:
     username: admin
     password:
-    url: jdbc:mariadb:aurora://localhost:3306/credhub_dev?usePipelineAuth=false&useBatchMultiSend=false
+    url: jdbc:mariadb://localhost:3306/credhub_dev?usePipelineAuth=false&useBatchMultiSend=false
   flyway:
     locations: classpath:/db/migration/common,classpath:/db/migration/mysql
