--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
-    implementation("org.mariadb.jdbc:mariadb-java-client")
+    implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2:${h2Version}")
 
     // Other
