--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("com.h2database:h2:${h2Version}")
-    implementation("org.mariadb.jdbc:mariadb-java-client")
+    implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
 
 
     // Other
