feature: simple /info performance test
* This is a JMeter test file
* Only gets one sample
* To run, first modify the HTTP request defaults to point to the CredHub server to test

[#182335096]

Co-authored-by: Bruce Ricard <bricard@vmware.com>

--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,4 @@ applications/credhub-api/src/test/resources/server.cnf
 applications/credhub-api/src/main/resources/application-dev-external-provider.yml
 application-*-generated.yml
 libs/
+jmeter.log
