--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,8 @@ updates:
     update-types: ["version-update:semver-major"]
   - dependency-name: "org.springframework.restdocs:spring-restdocs-asciidoctor"  ## 3.0.0 bumps to Spring Framework 6.0.0 which requires Java 17. Bumps this after we take a Spring Boot version for the rest of the project that bumps to Spring Framework 6.0.0.
     update-types: ["version-update:semver-major"]
+  - dependency-name: "org.springframework.boot:*"
+    update-types: [ "version-update:semver-major" ] # Bump this after we bump to Java 17, which v3 requires (and the current v2 will be supported until November 2023: https://spring.io/blog/2022/05/24/preparing-for-spring-boot-3-0)
 
 - package-ecosystem: "github-actions"
   directory: "/"
