unpin jUnit version
* Delegates jUnit updates to Spring.

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation('org.springframework.cloud:spring-cloud-starter-contract-verifier')
-    testImplementation("junit:junit:${junitVersion}")
+    testImplementation("junit:junit")
 }
 
 configurations.all {
