--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-validation')
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("junit:junit:${junitVersion}")
+    testImplementation("junit:junit")
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
