feature: pin Hikari 5.0.1

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
