--- a/backends/shared-backend-configuration/build.gradle
+++ b/backends/shared-backend-configuration/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
     implementation("com.h2database:h2:${h2Version}")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     // Other
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
