--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2:${h2Version}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     // proto
     implementation "io.grpc:grpc-services:${grpcVersion}"
