--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-security')
     implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}")
     implementation("org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauth2Version}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
 
