--- a/components/audit/build.gradle
+++ b/components/audit/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 }
 
 dependencyManagement {
