--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2:${h2Version}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     // Other
     implementation("org.passay:passay:${passayVersion}")
