--- a/components/test-support/build.gradle
+++ b/components/test-support/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 }
 
 dependencyManagement {
