Use modified HikariCP version from local maven repo and enable HikariCP debug logging
[#183430962]

--- a/applications/credhub-api/src/main/resources/log4j2.properties
+++ b/applications/credhub-api/src/main/resources/log4j2.properties
@@ -6,4 +6,7 @@ appender.console.target=SYSTEM_OUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSS}{GMT+0}Z [%t] %-5level %logger{36} - %msg%n
 
+logger.app.name=com.zaxxer.hikari
+logger.app.level=debug
+
 rootLogger.appenderRef.stdout.ref = STDOUT
