--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -29,6 +29,7 @@ apply from: "${rootDir.toPath()}/spotbugs.gradle"
 apply plugin: "com.google.protobuf"
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
 }
@@ -60,6 +61,7 @@ dependencies {
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
