--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -22,6 +22,7 @@ apply from: "${rootDir.toPath()}/pmd-config.gradle"
 apply from: "${rootDir.toPath()}/spotbugs.gradle"
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
 }
@@ -51,6 +52,7 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("com.h2database:h2:${h2Version}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
     implementation("org.mariadb.jdbc:mariadb-java-client")
 
 
