--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -25,6 +25,7 @@ apply from: "${rootDir.toPath()}/ktlint.gradle"
 apply from: "${rootDir.toPath()}/spotbugs.gradle"
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
 }
@@ -54,6 +55,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-security')
     implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}")
     implementation("org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauth2Version}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
 
