--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -25,6 +25,7 @@ apply from: "${rootDir.toPath()}/pmd-config.gradle"
 apply from: "${rootDir.toPath()}/spotbugs.gradle"
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
 }
@@ -58,6 +59,7 @@ dependencies {
 
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation("com.h2database:h2:${h2Version}")
+    implementation("com.zaxxer:HikariCP:${hikariCpVersion}")
 
     // proto
     implementation "io.grpc:grpc-services:${grpcVersion}"
