fix: Compile errors with Kotlin 1.8.22
- Spring boot 2.7.x depends on kotlin 1.6.21, which conflicted with kotlin 1.8.22 and caused the following compilation error:
```
e: java.lang.NoSuchMethodError: kotlin.script.experimental.api.KotlinType.<init>(Lkotlin/reflect/KClass;ZILkotlin/jvm/internal/DefaultConstructorMarker;)V
```
Resolved it by overriding spring boot's kotlin version dependency.
- There was also a new type mismatch error with the new Kotlin version as follows:
```
Type mismatch: inferred type is CredentialVersion? but CredentialVersion was expected
```
Fixed that, too.

[#185361257]

--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -66,6 +66,8 @@ dependencyManagement {
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     }
 }
+// Override spring boot's kotllin version dependency
+ext['kotlin.version'] = '${kotlinVersion}'
 
 sourceSets {
     test {
