--- a/backends/shared-backend-configuration/build.gradle
+++ b/backends/shared-backend-configuration/build.gradle
@@ -60,6 +60,8 @@ dependencyManagement {
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     }
 }
+// Override spring boot's kotllin version dependency
+ext['kotlin.version'] = '${kotlinVersion}'
 
 sourceSets {
     test {
