--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -82,6 +82,8 @@ dependencyManagement {
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     }
 }
+// Override spring boot's kotllin version dependency
+ext['kotlin.version'] = '${kotlinVersion}'
 
 sourceSets {
     main {
