--- a/components/http-support/build.gradle
+++ b/components/http-support/build.gradle
@@ -45,6 +45,8 @@ dependencyManagement {
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     }
 }
+// Override spring boot's kotllin version dependency
+ext['kotlin.version'] = '${kotlinVersion}'
 
 sourceSets {
     test {
