--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -66,6 +66,8 @@ dependencyManagement {
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     }
 }
+// Override spring boot's kotllin version dependency
+ext['kotlin.version'] = '${kotlinVersion}'
 
 sourceSets {
     test {
