refactor: Override spring's kotlin version dependency once in the main build file instead of each subproject build file

--- a/build.gradle
+++ b/build.gradle
@@ -71,3 +71,6 @@ subprojects {
         }
     }
 }
+
+// Override spring boot's kotllin version dependency
+ext['kotlin.version'] = '${kotlinVersion}'
