fix: Missing asciidoctor transitive dependencies in maven repositories
- Declare dependency to 'org.asciidoctor.convert.gradle.plugin' instead of `asciidoctor-gradle-plugin` and overriding 'grolifant' version. 'org.asciidoctor.convert.gradle.plugin' 2.4.0 has dependencies to later versions of 'asciidoctor-gradle-jvm and 'grolifant'.
- Add gradle plugin maven repository in build repositories for the asciidoctor task.

[#185464175]

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -9,9 +9,8 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
-        classpath("org.asciidoctor:asciidoctor-gradle-plugin:${asciiDoctorPluginVersion}")
+        classpath("org.asciidoctor.convert:org.asciidoctor.convert.gradle.plugin:${asciiDoctorConvertPluginVersion}")
         classpath("com.google.protobuf:protobuf-gradle-plugin:0.9.3")
-        classpath("org.ysb33r.gradle:grolifant:0.16.1")
     }
 }
 
@@ -31,6 +30,7 @@ apply plugin: "com.google.protobuf"
 
 repositories {
     mavenCentral()
+    maven { url("https://plugins.gradle.org/m2/") }
     jcenter()
 }
 
