--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("org.hsqldb:hsqldb:${hsqldbVersion}")
 
     // proto
     implementation "io.grpc:grpc-services:${grpcVersion}"
