--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("org.hsqldb:hsqldb:${hsqldbVersion}")
 
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
     api("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
