--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("org.hsqldb:hsqldb:${hsqldbVersion}")
 
     // Other
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
