--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         commonsCodecVersion = '1.16.0' // remove this after deleting (now deprecated) spring-security-oauth2
         flywayVersion = '7.15.0'
         guavaVersion = '32.0.1-jre'
-        h2Version = '1.4.200'
+        hsqldbVersion = '2.7.2'
         jsonPathVersion = '2.8.0'
         kotlinVersion = '1.8.22'
         ktlintVersion = '0.43.2'
@@ -65,7 +65,7 @@ subprojects {
     plugins.withType(JavaPlugin) {
         dependencies {
             implementation("org.yaml:snakeyaml:${snakeyamlVersion}")
-            implementation("com.h2database:h2:${h2Version}")
+            implementation("org.hsqldb:hsqldb:${hsqldbVersion}")
             implementation("com.google.guava:guava:${guavaVersion}")
             testImplementation("org.mockito:mockito-inline")
         }
