--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("org.hsqldb:hsqldb:${hsqldbVersion}")
 
     // Other
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
