wip: Change active spring in-memory data profiles to use hsqldb and set `spring.datasource.url` to hsqldb jdbc url so spring can detect the im-memory database type to use.
- `scripts/start_server.sh` fails with the following error
```
Caused by: org.springframework.beans.BeanInstantiationException: Failed to instantiate [com.zaxxer.hikari.HikariDataSource]: Factory method 'dataSource' threw exception; nested exception is java.lang.UnsupportedClassVersionError: org/hsqldb/jdbc/JDBCDriver has been compiled by a more recent version of the Java Runtime (class file version 55.0), this version of the Java Runtime only recognizes class file versions up to 52.0
```
- hsqldb 2.7 requires Java 11

[#185364155]

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -101,7 +101,7 @@ bootRun {
         jvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"]
     }
     systemProperties = System.properties
-    systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev, dev-h2")
+    systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev, dev-hsqldb")
 }
 
 bootJar {
@@ -116,7 +116,7 @@ test {
     }
 
     systemProperties = System.properties
-    systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "unit-test-h2")
+    systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "unit-test-hsqldb")
     systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
     outputs.upToDateWhen { false }
 }
