--- a/components/http-support/build.gradle
+++ b/components/http-support/build.gradle
@@ -47,6 +47,16 @@ dependencyManagement {
 }
 
 sourceSets {
+    all {
+        // Required for Guava 32.1 with Gradle 6. Should be removed for
+        // Gradle 7 or later. See https://github.com/google/guava/releases.
+        configurations.getByName(runtimeClasspathConfigurationName) {
+            attributes.attribute(Attribute.of("org.gradle.jvm.environment", String), "standard-jvm")
+        }
+        configurations.getByName(compileClasspathConfigurationName) {
+            attributes.attribute(Attribute.of("org.gradle.jvm.environment", String), "standard-jvm")
+        }
+    }
     test {
         resources {
             srcDirs += [
