--- a/spotbugs.gradle
+++ b/spotbugs.gradle
@@ -3,12 +3,14 @@ spotbugs {
     excludeFilter = file("$rootProject.projectDir/config/findbugs/exclude-filter.xml")
 }
 
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
-    reports {
-        xml.enabled = false
-        html.enabled = true
-    }
-}
+//import com.github.spotbugs.SpotBugsTask
+//
+//tasks.withType(SpotBugsTask) {
+//    reports {
+//        xml.enabled = false
+//        html.enabled = true
+//    }
+//}
 
 dependencies {
     compileOnly("com.github.spotbugs:spotbugs-annotations:$spotBugsToolVersion")
