--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -105,7 +105,7 @@ bootRun {
 }
 
 bootJar {
-    archiveName = "credhub.jar"
+    archiveFileName = "credhub.jar"
     def versionFile = new File("$projectDir/src/main/resources/version")
 }
 
