fix: "archiveName" gradle prop is deprecated
- to handle the following deprecation notice:
```
The AbstractArchiveTask.archiveName property has been deprecated. This is scheduled to be removed in Gradle 7.0. Please use the archiveFileName property instead. See https://docs.gradle.org/6.9.4/dsl/org.gradle.api.tasks.bundling.AbstractArchiveTask.html#org.gradle.api.tasks.bundling.AbstractArchiveTask:archiveName for more details.
```

[#183977589]

Co-authored-by: Alicia Yingling <yalicia@vmware.com>

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -104,7 +104,7 @@ bootRun {
 }
 
 bootJar {
-    archiveName = "credhub.jar"
+    archiveFileName = "credhub.jar"
     def versionFile = new File("$projectDir/src/main/resources/version")
 }
 
