--- a/components/test-support/build.gradle
+++ b/components/test-support/build.gradle
@@ -59,7 +59,7 @@ configurations {
 
 task jarTest (type: Jar, dependsOn: testClasses) {
     from sourceSets.test.output
-    classifier = 'test'
+    archiveClassifier = 'test'
 }
 
 artifacts {
