--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         ktlintVersion = '0.43.2'
         passayVersion = '1.6.3'
         postgresqlJdbcVersion = '42.6.0'
-        spotBugsToolVersion = '4.6.0'
+        spotBugsToolVersion = '4.7.3'
         springRestDocsVersion = '2.0.7.RELEASE'
         springBootVersion = '2.7.14'
         springSecurityOauth2Version = '2.5.2.RELEASE'
@@ -41,7 +41,7 @@ buildscript {
 
 plugins {
     id 'com.github.ben-manes.versions' version '0.47.0'
-    id 'com.github.spotbugs'
+    id 'com.github.spotbugs' version '5.1.0'
 }
 
 apply plugin: DependenciesGraphPlugin
