Require Java 11 or later for all gradle tasks
[#184142402]

--- a/build.gradle
+++ b/build.gradle
@@ -73,3 +73,5 @@ subprojects {
 
 // Override spring boot's kotllin version dependency
 ext['kotlin.version'] = '${kotlinVersion}'
+
+assert JavaVersion.current().isJava11Compatible()
