--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
+        classpath("com.google.protobuf:protobuf-gradle-plugin:0.9.4")
     }
 }
 
@@ -17,6 +18,7 @@ apply plugin: "idea"
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "com.google.protobuf"
 
 apply from: "${rootDir.toPath()}/kotlin.gradle"
 apply from: "${rootDir.toPath()}/ktlint.gradle"
@@ -68,6 +70,7 @@ dependencies {
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+    implementation("com.google.protobuf:protobuf-java:3.25.2")
 }
 
 dependencyManagement {
