--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     //gRPC
     implementation "com.google.api.grpc:proto-google-common-protos:2.30.0"
     implementation "io.grpc:grpc-services:${grpcVersion}"
+    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
 
     //gRPC - Netty
     implementation "io.grpc:grpc-netty:${grpcVersion}"
