feature: new db layer module
* we will soon move the DB entity objects to this new module
* the main reason for this being that we are running into circular
  dependency issues due to the fact that the DB entities are currently
  in different modules, and will need to depend on each other

Co-Authored-by: Bruce Ricard <bruce.ricard@broadcom.com>
[#182121168](https://www.pivotaltracker.com/story/show/182121168)

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ include "components:permissions"
 include "components:string-utilities"
 include "components:test-support"
 include "components:time-support"
+include 'components:database-entities'
