wip: create database-entities module
Co-authored-by: Bruce Ricard <bruce.ricard@broadcom.com>

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation project(":components:permissions")
     implementation project(":components:string-utilities")
     implementation project(":components:time-support")
+    implementation project(":components:database-entities")
 
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
 
