--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation project(":components:errors")
     implementation project(":components:string-utilities")
     implementation project(":components:time-support")
+    implementation project(":components:database-entities")
     implementation project(":backends:remote")
 
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
