--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation project(":components:credentials")
     implementation project(":components:encryption")
     implementation project(":components:errors")
+    implementation project(":components:database-entities")
 
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
 
