migrate credentials tests to jUnit 5

--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-security')
     implementation('org.springframework.boot:spring-boot-starter-validation')
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("junit:junit")
-
+    testImplementation(platform('org.junit:junit-bom:5.10.2'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
@@ -91,6 +91,10 @@ test {
     testLogging {
         events "started", "passed", "failed", "skipped"
         exceptionFormat "full"
+    }
+
+    test {
+        useJUnitPlatform {}
     }
 
     systemProperties = System.properties
