doc: The need to stay with protobuf 3.25.x

--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -70,6 +70,12 @@ dependencies {
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+
+    // We need to stay with protobuf 3.25.x as the latest grpc 1.62.2 still
+    // depends on protobuf 3.25.x. Once we bump grpc to version that depnds on
+    // protobuf to 4.x.x, it is likely that we are going to get conflicts
+    // because we also have direct dependency to protobuf 3.25.x. We will need
+    // to bump protobuf version to 4.x.x then.
     implementation("com.google.protobuf:protobuf-java:3.25.3")
 }
 
