refactor: version pinning in one location
- Moved grpc version settings to the main gradle build file.
- Set protofub-java & protoc version in the main gradle build file.

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -1,7 +1,4 @@
 buildscript {
-    ext {
-        grpcVersion = '1.62.2'
-    }
     repositories {
         mavenCentral()
         maven { url("https://repo.spring.io/plugins-release") }
@@ -128,6 +125,6 @@ asciidoctor.finalizedBy(buildAndCopyRestDocsIntoSpringStaticAssetLocation)
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.25.3"
+        artifact = "com.google.protobuf:protoc:${protoCVersion}"
     }
 }
