--- a/backends/remote/build.gradle
+++ b/backends/remote/build.gradle
@@ -1,7 +1,4 @@
 buildscript {
-    ext {
-        grpcVersion = '1.62.2'
-    }
     repositories {
         mavenCentral()
         maven { url("https://repo.spring.io/plugins-release") }
@@ -99,7 +96,7 @@ sourceSets {
 assemble.mustRunAfter("clean")
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.25.3"
+        artifact = "com.google.protobuf:protoc:${protoCVersion}"
     }
     plugins {
         grpc {
