--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
-        classpath("org.asciidoctor.convert:org.asciidoctor.convert.gradle.plugin:${asciiDoctorConvertPluginVersion}")
+        classpath("org.asciidoctor.jvm.convert:org.asciidoctor.jvm.convert.gradle.plugin:${asciiDoctorConvertPluginVersion}")
         classpath("com.google.protobuf:protobuf-gradle-plugin:0.9.4")
     }
 }
@@ -16,7 +16,7 @@ apply plugin: "idea"
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'org.asciidoctor.convert'
+apply plugin: 'org.asciidoctor.jvm.convert'
 apply from: "${rootDir.toPath()}/spring-rest-docs-config.gradle"
 apply from: "${rootDir.toPath()}/kotlin.gradle"
 apply from: "${rootDir.toPath()}/ktlint.gradle"
@@ -27,6 +27,10 @@ apply plugin: "com.google.protobuf"
 repositories {
     mavenCentral()
     maven { url("https://plugins.gradle.org/m2/") }
+}
+
+configurations {
+    asciidoctorExtensions
 }
 
 dependencies {
@@ -78,7 +82,7 @@ dependencies {
     implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
 
     testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc:$springRestDocsVersion")
-    asciidoctor("org.springframework.restdocs:spring-restdocs-asciidoctor:$springRestDocsVersion")
+    asciidoctorExtensions("org.springframework.restdocs:spring-restdocs-asciidoctor:$springRestDocsVersion")
 }
 
 dependencyManagement {
@@ -118,7 +122,7 @@ test {
 task buildAndCopyRestDocsIntoSpringStaticAssetLocation(type: Copy) {
     dependsOn asciidoctor
 
-    from file("build/asciidoc/html5/index.html")
+    from file("build/docs/asciidoc/index.html")
     into project(":applications:credhub-api").file("src/main/resources/static/docs/")
 }
 asciidoctor.finalizedBy(buildAndCopyRestDocsIntoSpringStaticAssetLocation)
