--- a/build.gradle
+++ b/build.gradle
@@ -62,8 +62,8 @@ buildscript {
     ext['netty.version'] = '4.1.115.Final'
 
     // spring-boot 2.7.18 has dependency to tomcat-embed-core 9.0.83, which
-    // has multipe CVEs including CVE-2024-34750. Setting it to 9.0.97
-    ext["tomcat.version"] = '9.0.97'
+    // has multipe CVEs including CVE-2024-34750. Setting it to 9.0.98.
+    ext["tomcat.version"] = '9.0.98'
 }
 
 plugins {
