Modifying `AuthConfiuration` class to use new lib
- Made the `oauth2ResourceServer` code block compilable.
- Added a couple of new oauth2-specific spring-security dependencies that are reuired in runtime in `:components:auth` sub-project. They are likely to be neeeded in other sub-projects, too.
- In `AuthConfigurationTest`, `infoCanBeAccessedWithoutAuthentication()` and `healthCanBeAccessWithoutAuthentication()` pass. Other cases that have something to do with actual auth either fail or took too long for me to able to see the result.

Co-authored-by: Joe Eltgroth <joe.eltgroth@broadcom.com>

--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -34,10 +34,16 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.security:spring-security-web")
     implementation('org.springframework.boot:spring-boot-starter-security')
+
+    // Old oauth2 libs
     implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}") {
         exclude(module: "bcprov-jdk15on")
     }
     implementation("org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauth2Version}")
+    // New ouath2 libs
+    implementation("org.springframework.security:spring-security-oauth2-resource-server")
+    implementation("org.springframework.security:spring-security-oauth2-jose")
+
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("junit:junit")
