feat: Replacing dependencies to old ouath2 lib `AuthConfiguration`
- Rewrote the class in Java, replacing the use of the old oauth2 lib with new lib.
- Made all test cases except 4 mTLS-related ones pass in `AuthConfigurationTest`.
- Have not tried to run the production code, i.e. run the credhub server application yet.

Co-authored-by: Joe Eltgroth <joe.eltgroth@broadcom.com>

--- a/applications/credhub-api/src/test/resources/application-unit-test.yml
+++ b/applications/credhub-api/src/test/resources/application-unit-test.yml
@@ -49,12 +49,16 @@ spring:
       idle-timeout: 500
       minimum-idle: 2
 
-logging:
-  level:
-    org:
-      hibernate:
-        SQL: DEBUG
-        type:
-          descriptor:
-            sql:
-              BasicBinder: TRACE
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        SQL: DEBUG
+#        type:
+#          descriptor:
+#            sql:
+#              BasicBinder: TRACE
+#      springframework:
+#        security: TRACE
+#      cloudfoundry:
+#        credhub: TRACE
