--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
         mariadbJdbcVersion = '2.7.12' // Bumping to v3 breaks some pipeline jobs, so pinning to v2 for now. v2 (current version) is stable and will be supported until about September 2025 (https://mariadb.com/kb/en/about-mariadb-connector-j/).
         snakeyamlVersion = '2.4'
         grpcVersion = '1.71.0'
+        byteBuddyVersion = '1.14.12'
         // We need to stay with protobuf-java & protoc 3.25.x as the latest
         // grpc still depends on protobuf-java & protoc 3.25.x. Once we
         // bump grpc to version that depnds on protobuf-java & protoc to 4.x.x,
@@ -92,7 +93,9 @@ subprojects {
             implementation("org.yaml:snakeyaml:${snakeyamlVersion}")
             implementation("com.h2database:h2:${h2Version}")
             implementation("com.google.guava:guava:${guavaVersion}")
+            implementation("net.bytebuddy:byte-buddy:${byteBuddyVersion}")
             testImplementation("org.mockito:mockito-inline")
+            testImplementation("net.bytebuddy:byte-buddy-agent:${byteBuddyVersion}")
         }
     }
 }
@@ -100,4 +103,4 @@ subprojects {
 // Override spring boot's kotllin version dependency
 ext['kotlin.version'] = '${kotlinVersion}'
 
-assert JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)
+assert JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_21)
