--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     api("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
-    implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
+    implementation("org.apache.httpcomponents.client5:httpclient5")
     implementation("com.google.protobuf:protobuf-java:${protoBufJavaVersion}")
 }
 
