--- a/components/http-support/build.gradle
+++ b/components/http-support/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
-    implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
+    implementation("org.apache.httpcomponents.client5:httpclient5")
 }
 
 dependencyManagement {
