--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ subprojects {
             implementation("org.yaml:snakeyaml:${snakeyamlVersion}")
             implementation("com.h2database:h2:${h2Version}")
             implementation("com.google.guava:guava:${guavaVersion}")
-            testImplementation("org.mockito:mockito-inline")
+            testImplementation("org.mockito:mockito-core")
         }
     }
 }
